Added JAXB as maven dependency for future compatibility